Imagen de fondo index

--- a/index.html
+++ b/index.html
@@ -1,8 +1,21 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="UTF-8">
-        
-    </head>
+<head>
+<meta charset="UTF-8">
+<title>La Primer Web de Benzoino</title> 
+<link rel="stylesheet" href="estilo.css" type="text/css">
+</head>
+<body>
+    <div id="Superior">
+        <div id="Titulo">
+        <img src="">
+        </div>
+    <h1>BENZOINO BIRRA</h1>
+    <H3>De la Ciudad del Samba al Mundo</H3>
+    </div>
+
+
+</body>
+
     
 </html>
