--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 <title>La Primer Web de Benzoino</title> 
 <link rel="stylesheet" href="estilo.css" type="text/css">
 </head>
-<body>
+<body background="img/fondo.jpg" alt="Mural de Carnaval representada por la artista Mariana Brizuela, de La Bianca " >
     <div id="Superior">
         <div id="Titulo">
         <img src="">
-        </div>
-    <h1>BENZOINO BIRRA</h1>
-    <H3>De la Ciudad del Samba al Mundo</H3>
+    <header><h1 style="text-align: center;" >BENZOINO BIRRA</h1>
+    <H3 style="text-align: center;">De la Ciudad del Samba al Mundo</H3>
+    </header>
     </div>
 
 
