--- a/index.html
+++ b/index.html
@@ -5,14 +5,32 @@
 <title>La Primer Web de Benzoino</title> 
 <link rel="stylesheet" href="estilo.css" type="text/css">
 </head>
-<body background="img/fondo.jpg" alt="Mural de Carnaval representada por la artista Mariana Brizuela, de La Bianca " >
+<body>
     <div id="Superior">
         <div id="Titulo">
-        <img src="">
     <header><h1 style="text-align: center;" >BENZOINO BIRRA</h1>
     <H3 style="text-align: center;">De la Ciudad del Samba al Mundo</H3>
-    </header>
+    <h3 style="text-align: center;">LA BIANCA. CONCORDIA. ENTRE RÍOS</h3>
+        <nav>
+            <ul>
+            <li><a href="html/nuestras birras.html">Nuestras Birras</a></li>
+            <li><a href="html/quienes somos.html">Quienes Somos</a></li>
+            <li><a href="html/contacto.html">Contacto</a></li>
+            </ul>
+        </nav>
+</header>
+        </div>
     </div>
+    <section>
+        <h2>Ser de la ciudad Satelite, Ser TRICOLOR</h2>
+        <article>
+            <p>
+                Muy pocos entienden que es ser <em>Bianquero</em>, solo los que somos de este lugar lo sabemos, <br>
+                No lo podemos explicar, pero tenemos nuestra propia ciudad , y nos gusta disfrutar de ella... <br>
+                Por esto, no nos podia Faltar una marca propia <em>"Benzoino"</em>. <br>
+            </p>
+        </article>
+    </section>
 
 
 </body>
